kubernetes/management/expo-updates/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: expo-updates
  labels:
    backups.kalexlab.xyz/use: "true"
