kubernetes/management/expo-updates/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: expo-updates-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`expo-ota.kalexlab.xyz`)
      services:
        - name: xavia-ota
          port: 3000
  tls:
    secretName: expo-updates-ingress-certificate-secret
